...
      val isSelected: Boolean,
      val onClick: () -> Unit
  )

  var quickFixFilterButtons by remember {
    mutableStateOf(
        listOf(QuickFixFilterButtons("All", true, {})) +
            Status.entries
                .filter { it != Status.FINISHED }
                .map { status ->
                  QuickFixFilterButtons(
                      status.name.lowercase().replaceFirstChar { it.uppercase() }, false, {})
                })
  }

  Scaffold(
      containerColor = colorScheme.background,
...
                              else BorderStroke(1.dp, colorScheme.primary),
                      )
                    }
                  }
                  val buttonTitle = quickFixFilterButtons.firstOrNull { it.isSelected }?.title
                  when (buttonTitle) {
                    "Pending" ->
                        QuickFixesWidget(
                            status = "Pending",
                            quickFixList = quickFixes.filter { it.status == Status.PENDING },
                            onShowAllClick = { /* Handle Show All Click */},
                            onItemClick = { /* Handle QuickFix Item Click */},
                            modifier = Modifier.testTag("${buttonTitle}QuickFixes"),
                            itemsToShowDefault = 3,
                            workerViewModel = workerViewModel,
                        )
                    "Unpaid" -> {
                      QuickFixesWidget(
                          status = "Unpaid",
                          quickFixList = quickFixes.filter { it.status == Status.UNPAID },
                          onShowAllClick = { /* Handle Show All Click */},
                          onItemClick = { /* Handle QuickFix Item Click */},
                          modifier = Modifier.testTag("${buttonTitle}QuickFixes"),
                          itemsToShowDefault = 3,
                          workerViewModel = workerViewModel,
                      )
                    }
                    "Paid" -> {
                      QuickFixesWidget(
                          status = "Paid",
                          quickFixList = quickFixes.filter { it.status == Status.PAID },
                          onShowAllClick = { /* Handle Show All Click */},
                          onItemClick = { /* Handle QuickFix Item Click */},
                          modifier = Modifier.testTag("${buttonTitle}QuickFixes"),
                          itemsToShowDefault = 3,
                          workerViewModel = workerViewModel,
                      )
                    }
                    "Upcoming" -> {
                      QuickFixesWidget(
                          status = "Upcoming",
                          quickFixList = quickFixes.filter { it.status == Status.UPCOMING },
                          onShowAllClick = { /* Handle Show All Click */},
                          onItemClick = { /* Handle QuickFix Item Click */},
                          modifier = Modifier.testTag("${buttonTitle}QuickFixes"),
                          itemsToShowDefault = 3,
                          workerViewModel = workerViewModel,
                      )
                    }
                    "Completed" -> {
                      QuickFixesWidget(
                          status = "Completed",
                          quickFixList = quickFixes.filter { it.status == Status.COMPLETED },
                          onShowAllClick = { /* Handle Show All Click */},
                          onItemClick = { /* Handle QuickFix Item Click */},
                          modifier = Modifier.testTag("${buttonTitle}QuickFixes"),
                          itemsToShowDefault = 3,
                          workerViewModel = workerViewModel,
                      )
                    }
                    "Canceled" -> {
                      QuickFixesWidget(
                          status = "Canceled",
                          quickFixList = quickFixes.filter { it.status == Status.CANCELED },
                          onShowAllClick = { /* Handle Show All Click */},
                          onItemClick = { /* Handle QuickFix Item Click */},
                          modifier = Modifier.testTag("${buttonTitle}QuickFixes"),
...
                      )
                    }
                  }
                }
              }
              item {
                AnnouncementsWidget(
                    announcementViewModel = announcementViewModel,
                    navigationActions = navigationActions,
                    categoryViewModel = categoryViewModel,
                    itemsToShowDefault = 3,
                )
              }
...
                    workerViewModel = workerViewModel,
                    preferencesViewModel = preferencesViewModel,
                )
              }

              item {
                BillsWidget(
                    quickFixes = quickFixes,
                    onItemClick = { /*Handle Bill Item Click*/},
                    onShowAllClick = { /*Handle Show All Click*/},
                    itemsToShowDefault = 2,
                )
              }
...
